Update ParkingController.java